--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 layout: home
 paginate: true
+sub_title: "University of Washington - Fishery Sciences - Roberts Lab"
+image: /images/headers/oyster_bw.jpg
 ---
