remove bash scripts. clean up info and add imgs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 paginate: true
-sub_title: "University of Washington - Fishery Sciences - Roberts Lab"
+sub_title: "Marine Predators Group - University of Washington"
 image: /images/headers/tag_sword.jpg
 ---
